# purple

./: .gitignore  README.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/x86_64/: gdt.rs  interrupts.rs
kernel/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
